--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npx": "^10.2.2",
     "pg-promise": "^11.3.0",
     "react": "18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
     "react-scripts": "^5.0.1"
   },
